--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "description": "a website",
   "version": "0.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "npm run sass && concurrently --kill-others \"netlify dev\" \"npm run sass-watch\"",
+    "build": "cp src/* public/ && npm run sass",
+    "sass": "node-sass src/style.scss > public/style.css",
+    "sass-watch": "node-sass --watch src/style.scss --output public/style.css",
+    "test": "tape test/**/*.js"
+  },
   "dependencies": {},
   "devDependencies": {
-    "netlify-cli": "^2.69.11"
-  },
-  "scripts": {
-    "start": "netlify dev",
-    "test": "tape test/**/*.js"
+    "concurrently": "^5.3.0",
+    "netlify-cli": "^2.69.11",
+    "node-sass": "^5.0.0"
   },
   "repository": {
     "type": "git",
