--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "netlify dev",
     "build": "cp src/* public/ && npm run sass",
     "sass": "node-sass src/style.scss > public/style.css",
-    "sass-watch": "node-sass --watch src/style.scss --output public/style.css",
+    "sass-watch": "node-sass --watch src/style.scss --output public/",
     "test": "tape test/**/*.js"
   },
   "dependencies": {},
