--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
-  name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
-  media_folder: "src/uploads" # Media files will be stored in the repo under images/uploads
-  public_folder: "/uploads" # The src attribute for uploaded media will begin with /images/uploads
+  - name: git-gateway
+  - branch: main # Branch to update (optional; defaults to master)
+  - media_folder: "src/uploads" # Media files will be stored in the repo under images/uploads
+  - public_folder: "/uploads" # The src attribute for uploaded media will begin with /images/uploads
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
