--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && concurrently --kill-others \"budo --dir public/ --open --live\" \"npm run sass-watch\"",
-    "copy": "cp src/*.html public && cp src/admin/* public/admin",
-    "dev": "netlify dev",
+    "copy": "cp src/*.html public && cp src/admin/* public/admin && cp src/admin/config.yml public/",
+    "dev": "npm run build && netlify dev",
     "build": "mkdir -p public/admin && npm run copy && npm run sass",
     "sass": "sass src/style.scss public/style.css",
     "sass-watch": "sass --watch src/style.scss public/style.css",
