--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "tape test/**/*.js"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.11.1",
     "budo": "^11.6.4",
     "concurrently": "^5.3.0",
     "netlify-cli": "^2.71.0",
@@ -27,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/nichoth/psych-city/issues"
   },
-  "homepage": "https://github.com/nichoth/psych-city#readme"
+  "homepage": "https://github.com/nichoth/psych-city#readme",
+  "dependencies": {
+    "luxon": "^1.26.0"
+  }
 }
