--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -16,11 +16,23 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
       - {label: "Body", name: "body", widget: "markdown"}
-  - name: "posts"
-    label: "Post"
-    folder: "_posts"
-    filter:
-      field: language
-      value: en
+  # - name: "posts"
+  #   label: "Post"
+  #   folder: "_posts"
+  #   filter:
+  #     field: language
+  #     value: en
+  #   fields:
+  #     - {label: "Language", name: "language"}
+  - name: "posts"        #The name of the collection and should match our posts.json file's tag
+    label: "Posts"       #The name of the collection on the CMS itself
+    folder: "src/_posts"      #The folder that our blog posts will be loaded from and saved to
+    create: true             #Tells the CMS that new posts can be created
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"  #this sets the URL for the post
     fields:
-      - {label: "Language", name: "language"}
+        - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk"}
+        - {label: "Title", name: "title", widget: "string"}
+        - {label: "Description", name: "description", widget: "string"}
+        - {label: "Date", name: "date", widget: "date", default: ""}
+        - {label: "Post Body", name: "body", widget: "markdown"}
+        - {label: "Featured Image", name: "featuredImage", widget: "image"}
