--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "//": "npm run build && concurrently --kill-others \"budo --dir public/ --open --live\" \"npm run sass-watch\"",
     "start": "npm run build && concurrently --kill-others \"eleventy --serve\" \"npm run sass-watch\"",
-    "copy": "cp src/*.html public && mkdir -p public/admin && cp src/admin/* public/admin",
-    "dev": "npm run build && netlify dev",
+    "copy": "cp src/*.html public && mkdir -p public/admin && cp src/admin/* public/admin && cp src/uploads/* public/uploads",
+    "ntl-dev": "npm run build && netlify dev",
     "build": "npm run copy && npm run sass",
     "sass": "sass src/style.scss public/style.css",
     "sass-watch": "sass --watch src/style.scss public/style.css",
