--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -6,7 +6,7 @@ public_folder: "/uploads" # The src attribute for uploaded media will begin with
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "src/_posts/blog" # The path to the folder where the documents are stored
+    folder: "src/posts/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -26,7 +26,7 @@ collections:
   #     - {label: "Language", name: "language"}
   - name: "posts"        #The name of the collection and should match our posts.json file's tag
     label: "Posts"       #The name of the collection on the CMS itself
-    folder: "src/_posts"      #The folder that our blog posts will be loaded from and saved to
+    folder: "src/posts"      #The folder that our blog posts will be loaded from and saved to
     create: true             #Tells the CMS that new posts can be created
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"  #this sets the URL for the post
     fields:
