--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -30,9 +30,10 @@ collections:
     create: true             #Tells the CMS that new posts can be created
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"  #this sets the URL for the post
     fields:
+        - { label: "link url", name: "url", widget: "string" }
         - {label: "Layout", name: "layout", widget: "hidden", default: "layouts/post.njk"}
         - {label: "Title", name: "title", widget: "string"}
         - {label: "Description", name: "description", widget: "string"}
-        - {label: "Date", name: "date", widget: "date", default: ""}
+        - { label: "Date", name: "date", widget: "datetime", date_format: true, time_format: "HH:mm" }
         - {label: "Post Body", name: "body", widget: "markdown"}
         - {label: "Featured Image", name: "featuredImage", widget: "image"}
