--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -5,6 +5,7 @@ media_folder: "src/uploads" # Media files will be stored in the repo under image
 public_folder: "/uploads" # The src attribute for uploaded media will begin with /images/uploads
 show_preview_links: true
 publish_mode: editorial_workflow
+site_url: https://psych-city.netlify.app/
 collections:
   # - name: "blog" # Used in routes, e.g., /admin/collections/blog
   #   label: "Blog" # Used in the UI
