--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npm run build && concurrently --kill-others \"eleventy --serve\" \"npm run sass-watch\"",
     "copy": "cp src/*.html public && mkdir -p public/admin && cp src/admin/* public/admin && cp src/uploads/* public/uploads",
     "ntl-dev": "npm run build && netlify dev",
-    "build": "npm run copy && npm run sass",
+    "build": "npm run copy && npm run sass && eleventy",
     "sass": "sass src/style.scss public/style.css",
     "sass-watch": "sass --watch src/style.scss public/style.css",
     "test": "tape test/**/*.js"
